eZ Online Editor MCE extension Changelog



0.98
* string translations
* fix for bug when custom attribute or custom tag had a '_' in name
* switched custom block tag to use div tag to work better in TinyMCE
  (inline custom tags use span for the same reason)


0.97 (internal)
* disabled toolbar floating in ie 6 / 7 to work around floating bug
* moved ez_core scripts to ezoe folder to avoid design override problems
* Allow custom tags and table nesting


0.96 (internal)
* this extension is now known as ezoe and not eztinymce
* updated TinyMCE to 3.0.5
* added eZOEPacker ('ezoecss' and 'ezoescript' operators), to pack css and js
* EditorCSSFileList support added, support for css from other locations
* tinymce plugins from other locations (extensions/designs) now possible
* fixed and enabled indenting / outdenting 
* fixed class not working on p / header / tr / li tags
* fixed change class list when td / th is changed


0.95
* fixed issue with new custom tags not being saved correctly
* fixed js bug when you edit image
* Preview align changes while you edit image properties
* updated TinyMCE to 3.0.3
* enabled safari plugin in TinyMCE, this 'fixes' bugs in Safari
* Not Disable fullscreen button when you select a embed tag
* fixed class disapearing on table on store when border=0
* Added support for Skin Variants in ezoe.ini


0.94
* Fixed anchor insert
* Preview of embed object tags while editing / inserting
* Added th support (in cell properties popup)
* made merge cell work like old OE (no popup, use ctrl key to select cells)
* experimental support for indenting / outdenting added on lists


0.93
* Fixed link insert not working
* Changed text size to 0.8em (same as admin design) and font type
* Enabled undo support in tag popup's
* Fixed window size on merge table cell popup


0.92
* Fixed browser resize issue
* Made upload warning more human readable
* Made toolbar groupable (some ie7 issues left)
* Use i18n in editor and popups (some left)