@@ -3,11 +3,12 @@
 1.0
 Change internal tag from div -> span if you change from bloc to inline custom tag
 Better handling of clearing float content in block tags ( custom and embed )
-Use tag default values for row and col on TABLE tag
+Allow to set td values for a whole table column in td popup
 Ajax Browse support for links
 Override TinyMCE translations and use it for all js strings (fixes fullscreen description text++)
-Setting to disable use of css and js packer in case of regressions
+
 
 
 1.1
 Custimizable formats selector (custom tags and classes)
+Disable css and js packer when DevMode is on to make it easier to debug code
