@@ -12,15 +12,15 @@ eZOeMCE['extension_url'] = {'/ezoe/'|ezurl};
 
 // -->
 </script>
-    <script language="javascript" type="text/javascript" src={"javascript/tiny_mce_popup.js"|ezdesign}></script>
+    <script type="text/javascript" src={"javascript/tiny_mce_popup.js"|ezdesign}></script>
 
 {if $module_result.persistent_variable.scripts}
 {foreach $module_result.persistent_variable.scripts as $script}
-    <script language="javascript" type="text/javascript" src={$script|ezdesign}></script>
+    <script type="text/javascript" src={$script|ezdesign}></script>
 
 {/foreach}
 {/if}
-<style>
+<style type="text/css">
 <!--
 {literal}
 
