@@ -34,23 +34,52 @@ tinyMCEPopup.onInit.add( function()
     ez.$(ezTagName + '_type_source').addEvent('change', toggleCellType);
 });
 
-function specificTagEditor( el, ed )
+function switchTagTypeIfNeeded( el, ed, targetTag )
 {
-    var targetTag = ez.$(ezTagName + '_type_source').el.value, currentTag = el.nodeName.toLowerCase(), doc = ed.getDoc();
+    var currentTag = el.nodeName.toLowerCase();
     if ( targetTag !== currentTag )
     {
         // changing to a different node type
-        var newCell = doc.createElement(targetTag);
+        var  doc = ed.getDoc(), newCell = doc.createElement( targetTag );
 
-        for (var c=0; c<el.childNodes.length; c++)
+        for ( var c = 0; c < el.childNodes.length; c++ )
             newCell.appendChild(el.childNodes[c].cloneNode(1));
 
-        for (var a=0; a<el.attributes.length; a++)
+        for ( var a = 0; a < el.attributes.length; a++ )
             ed.dom.setAttrib(newCell, el.attributes[a].name, ed.dom.getAttrib(el, el.attributes[a].name));
 
-        el.parentNode.replaceChild(newCell, el);
-        el = newCell;
+        el.parentNode.replaceChild( newCell, el );
+        return newCell;
     }
+    return el;
+}
+
+function specificTagAttributeEditor( ed, el, args )
+{
+    var mode = ez.$('cell_args_apply_to').el.value, nodes, x = 0, target = ez.$(ezTagName + '_type_source').el.value;
+    if ( mode === 'row' )
+    {
+        nodes = ez.$$('> *', el.parentNode );
+    }
+    else if ( mode === 'column' )
+    {
+	    for (var i = 0, c = el.parentNode.childNodes, l = c.length; i < l; i++ ) 
+	    {
+	        if ( c[i] === el ) x = i + 1;
+	    };
+        nodes = ez.$$('tr > *:nth-child(' + x + ')', el.parentNode.parentNode );
+    }
+    if ( !nodes )
+    {
+        el = switchTagTypeIfNeeded( el, ed, target );
+        ed.dom.setAttribs(el, args);
+    }
+    else nodes.forEach(function( o )
+    {
+        o.el = switchTagTypeIfNeeded( o.el, ed, target );
+        ed.dom.setAttribs( o.el, args );
+    });
+        
 }
 
 function toggleCellType( e, el )
@@ -59,6 +88,12 @@ function toggleCellType( e, el )
     removeSelectOptions( node );
     addSelectOptions( node, cellClassList[el.value] );
     if ( tinyMCEelement && tinyMCEelement.className ) node.value = tinyMCEelement.className;
+    ez.$$('table.custom_attributes').forEach(function(o){
+        if ( o.el.id === el.value + '_customattributes' )
+            o.show();
+        else
+            o.hide();
+    }, this);
 }
 
 {/literal}
@@ -69,7 +104,7 @@ function toggleCellType( e, el )
 
 <div>
 
-    <form onsubmit="return insertGeneralTag( this );" action="JavaScript:void(0)" method="POST" name="EditForm" id="EditForm" enctype="multipart/form-data"
+    <form onsubmit="return insertGeneralTag( this );" action="JavaScript:void(0)" method="post" name="EditForm" id="EditForm" enctype="multipart/form-data"
     style="width: 360px;">
     
 
@@ -77,10 +112,11 @@ function toggleCellType( e, el )
         <div class="attribute-title">
             <h2 style="padding: 0 0 4px 0;">{$tag_name|upfirst|wash}</h2>
         </div>
-        
+        {def $cell_tag_list = hash('td', 'td', 'th', 'th')}
+
         {include uri="design:ezoe/generalattributes.tpl"
                  tag_name   = $tag_name
-                 attributes = hash('type', hash('td', 'td', 'th', 'th'),
+                 attributes = hash('type', $cell_tag_list,
                                    'width', '',
                                    'class', $class_list
                                  )
@@ -88,12 +124,30 @@ function toggleCellType( e, el )
                  classes    = hash('type', 'mceItemSkip')
         }
 
-        {include uri="design:ezoe/customattributes.tpl" tag_name=$tag_name}
+        
+		{foreach $cell_tag_list as $cell_tag => $text}
+		    {include uri="design:ezoe/customattributes.tpl" hide=$tag_name|ne( $cell_tag ) tag_name=$cell_tag}
+		{/foreach}
+
+        <table class="properties">
+        <tr>
+            <td class="column1"><label for="cell_args_apply_to">{'Apply to'|i18n('design/standard/ezoe')}</label></td>
+            <td><select id="cell_args_apply_to">
+                        <option value="cell">{'Cell'|i18n('design/standard/ezoe')}</option>
+                        <option value="column">{'Column'|i18n('design/standard/ezoe')}</option>
+                        <option value="row">{'Row'|i18n('design/standard/ezoe')}</option>
+            </select></td>
+        </tr>
+        </table>
 
         <div class="block"> 
             <div class="left">
                 <input id="SaveButton" name="SaveButton" type="submit" value="{'OK'|i18n('design/standard/ezoe')}" />
                 <input id="CancelButton" name="CancelButton" type="reset" value="{'Cancel'|i18n('design/standard/ezoe')}" onclick="cancelAction();" />
+
+                     
+
+
                 <!-- todo: upload new button / link / tab -->
             </div> 
         </div>
