@@ -7,6 +7,9 @@ eZ Online Editor MCE extension Changelog
 * fix for bug when custom attribute or custom tag had a '_' in name
 * switched custom block tag to use div tag to work better in TinyMCE
   (inline custom tags use span for the same reason)
+* fixed search bug
+* apply to whole column and row on table cell dialog
+* fixed custom attributes on table cells not correct if you switch cell type
 
 
 0.97 (internal)
